oneplus3: Configure Keypress boost
This patch enables and configures
Keypress boost as follows:

The weak boost forces 1.3Ghz on the
little cluster and 1.4Ghz on the big
cluster.

The strong boost forces 1.4Ghz on the little
cluster and 1.7Ghz on the big cluster.
Also the CPUBW frequency is boosted to
the maximum and power collapse is disabled.

The boost duration is determined individually
and automatically, so there is no need to configure it
here.

Signed-off-by: Alex Naidis <alex.naidis@linux.com>

--- a/overlay/frameworks/base/core/res/res/values/pa_config.xml
+++ b/overlay/frameworks/base/core/res/res/values/pa_config.xml
@@ -102,6 +102,27 @@
        <item>0x7D0</item>      <!-- CPUBOOST MIN_FREQ resource value -->
    </integer-array>
 
+   <!-- Whether Keypress Boost is enabled -->
+   <bool name="config_enableKeypressBoost">true</bool>
+
+   <!-- Boost parameters which get passed to QPerformance -->
+   <integer-array name="keypressboost_weak_param_value">
+       <item>0x40800100</item> <!-- CPUBOOST_MIN_FREQ LITTLE Core resource opcode -->
+       <item>0x514</item>      <!-- CPUBOOST MIN_FREQ resource value -->
+       <item>0x40800000</item> <!-- CPUBOOST_MIN_FREQ BIG CORE resource opcode -->
+       <item>0x578</item>      <!-- CPUBOOST MIN_FREQ resource value -->
+   </integer-array>
+   <integer-array name="keypressboost_strong_param_value">
+       <item>0x41800000</item> <!-- CPUBW_MIN_FREQ resource opcode-->
+       <item>140</item>        <!-- CPUBW_MIN_FREQ resource value-->
+       <item>0x40800100</item> <!-- CPUBOOST_MIN_FREQ LITTLE Core resource opcode -->
+       <item>0x578</item>      <!-- CPUBOOST MIN_FREQ resource value -->
+       <item>0x40800000</item> <!-- CPUBOOST_MIN_FREQ BIG CORE resource opcode -->
+       <item>0x6A4</item>      <!-- CPUBOOST MIN_FREQ resource value -->
+       <item>0x40400000</item> <!-- PWR_CLPS DIS resource opcode-->
+       <item>0x1</item>        <!-- PWR_CLPS DIS resource value-->
+   </integer-array>
+
   <!-- sRGB sysfs path -->
   <string name="config_srgb_path">/sys/class/graphics/fb0/SRGB</string>
 
