--- a/overlay/packages/apps/SnapdragonCamera/res/values/arrays.xml
+++ b/overlay/packages/apps/SnapdragonCamera/res/values/arrays.xml
@@ -22,6 +22,7 @@
         <item>@string/pref_camera_scenemode_entry_hdr</item>
         <item>@string/pref_camera_scenemode_entry_refocus</item>
         <item>@string/pref_camera_scenemode_entry_optizoom</item>
+        <item>@string/pref_camera_scenemode_entry_portrait</item>
         <item>@string/pref_camera_scenemode_entry_landscape</item>
         <item>@string/pref_camera_scenemode_entry_sports</item>
         <item>@string/pref_camera_scenemode_entry_flowers</item>
@@ -39,6 +40,7 @@
         <item>@drawable/ic_scene_mode_hdr</item>
         <item>@drawable/ic_scene_mode_refocus</item>
         <item>@drawable/ic_scene_mode_optizoom</item>
+        <item>@drawable/ic_scene_mode_portrait</item>
         <item>@drawable/ic_scene_mode_landscape</item>
         <item>@drawable/ic_scene_mode_sports</item>
         <item>@drawable/ic_scene_mode_flower</item>
@@ -56,6 +58,7 @@
         <item>hdr</item>
         <item>@string/pref_camera_advanced_feature_value_refocus_on</item>
         <item>@string/pref_camera_advanced_feature_value_optizoom_on</item>
+        <item>portrait</item>
         <item>landscape</item>
         <item>sports</item>
         <item>flowers</item>
