oneplus3: Enable FP unlock boost
Enable FP unlock boost to speed up unlocking
the device with the FP scanner during screen off.

This boost uses the strong boost parameters from
Keypress boost.

Set 800ms as boost duration which is based
on the average amount of time needed for
such an unlock.

Signed-off-by: Alex Naidis <alex.naidis@linux.com>

--- a/overlay/frameworks/base/core/res/res/values/pa_config.xml
+++ b/overlay/frameworks/base/core/res/res/values/pa_config.xml
@@ -123,6 +123,11 @@
        <item>0x1</item>        <!-- PWR_CLPS DIS resource value-->
    </integer-array>
 
+    <!-- Whether FP unlock Boost is enabled
+         Depends on Keypress Boost -->
+   <bool name="config_enableFPUnlockBoost">true</bool>
+   <integer name="fpunlockboost_duration">800</integer>
+
   <!-- sRGB sysfs path -->
   <string name="config_srgb_path">/sys/class/graphics/fb0/SRGB</string>
 
