--- a/overlay/packages/apps/SnapdragonCamera/res/values/arrays.xml
+++ b/overlay/packages/apps/SnapdragonCamera/res/values/arrays.xml
@@ -20,6 +20,7 @@
     <string-array name="pref_camera_scenemode_entries" translatable="false">
         <item>@string/pref_camera_scenemode_entry_auto</item>
         <item>@string/pref_camera_scenemode_entry_hdr</item>
+        <item>Auto HDR</item>
         <item>@string/pref_camera_scenemode_entry_optizoom</item>
         <item>@string/pref_camera_scenemode_entry_portrait</item>
         <item>@string/pref_camera_scenemode_entry_landscape</item>
@@ -36,6 +37,7 @@
 
     <array name="scenemode_thumbnails" translatable="false">
         <item>@drawable/ic_scene_mode_auto</item>
+        <item>@drawable/ic_scene_mode_hdr</item>
         <item>@drawable/ic_scene_mode_hdr</item>
         <item>@drawable/ic_scene_mode_optizoom</item>
         <item>@drawable/ic_scene_mode_portrait</item>
@@ -54,6 +56,7 @@
     <string-array name="pref_camera_scenemode_entryvalues" translatable="false">
         <item>auto</item>
         <item>hdr</item>
+        <item>@string/pref_camera_feature_hdr_auto</item>
         <item>@string/pref_camera_advanced_feature_value_optizoom_on</item>
         <item>portrait</item>
         <item>landscape</item>
