oneplus3: overlay: cleanup
oneplus3: overlay: Move FP overlay

This is a PA specific overlay, so move
it.

Signed-off-by: Alex Naidis <alex.naidis@linux.com>

oneplus3: overlay: Remove obsolete sensor id config

The sensor id doesn't exist, so this is no-op.

Signed-off-by: Alex Naidis <alex.naidis@linux.com>

--- a/overlay/frameworks/base/core/res/res/values/pa_config.xml
+++ b/overlay/frameworks/base/core/res/res/values/pa_config.xml
@@ -140,4 +140,7 @@
 
     <!-- Whether to intercept inputs on screen off -->
     <bool name="config_enableKeyHandler">true</bool>
+
+    <!-- Whether notify fingerprint client of successful cancelled authentication -->
+    <bool name="config_notifyClientOnFingerprintCancelSuccess">true</bool>
 </resources>
