Revert "oneplus3: Setup individual battery capacities for 3/3T"
This reverts commit d92cb9977e8ceda573c4f8225fb545ee5ce0a586.

Signed-off-by: Park Ju Hyung <qkrwngud825@gmail.com>

--- a/overlay/frameworks/base/core/res/res/xml/power_profile.xml
+++ b/overlay/frameworks/base/core/res/res/xml/power_profile.xml
@@ -115,6 +115,7 @@
     </array>
     <item name="cpu.idle">4.9</item>
     <item name="cpu.awake">8</item>
+    <item name="battery.capacity">3000</item>
     <array name="wifi.batchedscan">
         <value>.0002</value>
         <value>.002</value>
