oneplus3: Weaken Bootup Boost
- Decrease little cluster boost freq
  to ~1.2Ghz
- Decrease big cluster boost freq to
  ~1.8Ghz
- Decrease boost duration to 15 seconds

Change-Id: If7ab7860a47bc4ddba860343473eafc78e1e456e
Signed-off-by: Alex Naidis <alex.naidis@linux.com>

--- a/overlay/frameworks/base/core/res/res/values/pa_config.xml
+++ b/overlay/frameworks/base/core/res/res/values/pa_config.xml
@@ -48,10 +48,13 @@
        <item>0x40804100</item> <!-- CPUBOOST_MAX_FREQ LITTLE Core resource opcode-->
        <item>0xFFF</item>      <!-- CPUBOOST MAX_FREQ resource value-->
        <item>0x40800100</item> <!-- CPUBOOST_MIN_FREQ LITTLE Core resource opcode -->
-       <item>0x6A4</item>      <!-- CPUBOOST MIN_FREQ resource value -->
+       <item>0x4B0</item>      <!-- CPUBOOST MIN_FREQ resource value -->
        <item>0x40800000</item> <!-- CPUBOOST_MIN_FREQ BIG CORE resource opcode -->
-       <item>0x7D0</item>      <!-- CPUBOOST MIN_FREQ resource value -->
+       <item>0x708</item>      <!-- CPUBOOST MIN_FREQ resource value -->
     </integer-array>
+
+    <!-- Duration of the boost in seconds -->
+    <integer name="onbootboost_duration">15</integer>
 
     <!-- Boost parameters which get passed to QPerformance -->
     <integer-array name="qboost_weak_param_value">
