--- a/overlay/packages/apps/Settings/res/values/pa_config.xml
+++ b/overlay/packages/apps/Settings/res/values/pa_config.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright 2017 The ParanoidAndroid Project
-
+<!-- Copyright 2017 Paranoid Android
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
-
          http://www.apache.org/licenses/LICENSE-2.0
-
      Unless required by applicable law or agreed to in writing, software
      distributed under the License is distributed on an "AS IS" BASIS,
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -14,6 +11,11 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <!-- Burn in protection -->
-    <bool name="config_statusBarBurnInProtection">true</bool>
+  <!-- Defines the location of the fingerprint sensor on the device
+       0 = back
+       1 = front
+       2 = left side
+       3 = right side
+  -->
+  <integer name="config_fingerprintSensorLocation">1</integer>
 </resources>
