oneplus3: overlay: re-enable Dash Charge
We've already implemented its support on Oreo.

Signed-off-by: Hernán Castañón <herna@paranoidandroid.co>

--- a/overlay/frameworks/base/core/res/res/values/pa_config.xml
+++ b/overlay/frameworks/base/core/res/res/values/pa_config.xml
@@ -35,7 +35,7 @@
     <!--<bool name="config_hasAlertSlider">true</bool>-->
 
     <!-- Whether device has dash charging support -->
-    <!--<bool name="config_hasDashCharger">true</bool>-->
+    <bool name="config_hasDashCharger">true</bool>
 
     <!-- sRGB sysfs path -->
     <!--<string name="config_srgb_path">/sys/class/graphics/fb0/SRGB</string>-->
