msm8996: Set overlay for ipreachability
Set wifi disconnect only on initial ipreachability to allow
subnet detection. In other cases, ignore ipreachability as
it comes with a cost of false positives.

CRs-Fixed: 2138417
Change-Id: I677be233aeb765ca67478da99fb96c96e1490e2c

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -38,4 +38,7 @@
        <item>"wigig0"</item>
        <item>"wlan0"</item>
    </string-array>
+
+   <!-- Boolean indicating wifi disconnect only on initial IpReachability lost -->
+   <bool translatable="false" name="config_wifi_disconnect_only_on_initial_ipreachability">true</bool>
 </resources>
