oneplus3(t): enable RGB support
Signed-off-by: Hernán Castañón <herna@paranoidandroid.co>

--- a/overlay/frameworks/base/core/res/res/values/pa_config.xml
+++ b/overlay/frameworks/base/core/res/res/values/pa_config.xml
@@ -38,7 +38,7 @@
     <bool name="config_hasDashCharger">true</bool>
 
     <!-- sRGB sysfs path -->
-    <!--<string name="config_srgb_path">/sys/class/graphics/fb0/SRGB</string>-->
+    <string name="config_srgb_path">/sys/class/graphics/fb0/SRGB</string>
 
     <!-- Internal default to navigation bar value -->
     <!--<bool name="config_defaultToNavigationBar">false</bool>-->
