--- a/overlay-pa/frameworks/base/core/res/res/values/pa_config.xml
+++ b/overlay-pa/frameworks/base/core/res/res/values/pa_config.xml
@@ -19,4 +19,19 @@
     <!-- Whether device has physical triple state switch. -->
     <bool name="config_hasAlertSlider">true</bool>
 
+    <!-- Gesture key codes. -->
+    <integer name="config_doubleTapKeyCode">59</integer>
+
+    <!-- Default settings for gestures.
+             0 - Disabled
+             1 - Wake
+             2 - Flashlight
+             3 - Airplane
+             4 - Music [PAUSE]
+             5 - Music [NEXT]
+             6 - Music [BACK]
+             7 - Camera
+             8 - Dialer -->
+    <integer name="config_doubleTapDefault">1</integer>
+
 </resources>
