--- a/overlay/AOSPAFrameworksOnePlusOverlay/res/values/pa_config.xml
+++ b/overlay/AOSPAFrameworksOnePlusOverlay/res/values/pa_config.xml
@@ -59,4 +59,16 @@
     <!-- Whether or not swipe up gesture's opt-in setting is available on this device. -->
     <bool name="config_swipe_up_gesture_setting_available">false</bool>
 
+    <!-- Hardware keys present on the device, stored as a bit field.
+         This integer should equal the sum of the corresponding value for each
+         of the following keys present:
+             1 - Home
+             2 - Back
+             4 - Menu
+             8 - Assistant
+             16 - Recents
+         For example, a device with Home, Back and Recents keys would set this
+         config to 19. -->
+    <integer name="config_deviceHardwareKeys">19</integer>
+
 </resources>
