--- a/overlay/BluetoothOnePlusOverlay/res/values/config.xml
+++ b/overlay/BluetoothOnePlusOverlay/res/values/config.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (c) 2014, The Linux Foundation. All rights reserved.
+<!-- Copyright (c) 2014-2020, The Linux Foundation. All rights reserved.
 
      Redistribution and use in source and binary forms, with or without
      modification, are permitted (subject to the limitations in the
@@ -30,9 +30,12 @@
      IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 <resources>
+
+    <bool name="profile_supported_a2dp_sink">true</bool>
     <bool name="profile_supported_avrcp_controller">true</bool>
-    <bool name="profile_supported_a2dp_sink">false</bool>
-    <bool name="profile_supported_sap">true</bool>
-    <bool name="profile_supported_hid_device">false</bool>
+    <bool name="profile_supported_avrcp_target">false</bool>
     <bool name="profile_supported_ba">true</bool>
+    <bool name="profile_supported_hid_device">false</bool>
+    <bool name="profile_supported_sap">true</bool>
+
 </resources>
